--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <title>Bucky on Sol</title>
+    <title>Pendy - the WebPage</title>
     <meta name="robots" content="max-image-preview:large" />
     <script>
       window._wpemojiSettings = {
